--- a/TMF814Client/pom.xml
+++ b/TMF814Client/pom.xml
@@ -123,7 +123,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.ti.ngtnm.ptnsvcssoem2pm.App</mainClass>
+              <mainClass>com.ti.inpas.tmf814client.App</mainClass>
             </manifest>
             <manifestEntries>
               <Class-Path>. conf/</Class-Path>
